--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "datatables.net": "^1.13.1",
+        "datatables.net-dt": "^1.13.1"
     }
 }
